[package]
name = "touchgrass"
authors = ["iamkneel"]
description = "Check the weather. Hacker style."
version = "0.0.1-alpha"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.2.12", features = ["derive"] }
colored = "2.0.0"
reqwest = { version = "0.11.11", features = ["blocking", "json"] }
serde = { version = "1.0.139", features = ["derive"] }
serde_json = "1.0.82"
toml = "0.5.9"

[[bin]]
name = "tg"
path = "src/main.rs"
